--- a/www/style/sepia.css-tablet.css
+++ b/www/style/sepia.css-tablet.css
@@ -136,7 +136,7 @@ body {
   max-width:64px;
   margin:8px;
 }
-.pageContentWrapper.River #stream .section .article .bodyvid {
+.pageContentWrapper.River #stream .section .article .enciframe {
   clear:both;
   display:block;
   margin:20px auto 10px;
